crates/ferrum-interfaces/tests/ui/vnext/fail/commit_outcome_buffer_is_private.rs
use ferrum_interfaces::vnext::ResourceCommitOutcome;

fn raw_buffer<B>(outcome: &ResourceCommitOutcome<B>) {
    let _ = outcome.buffer();
}

fn main() {}
